--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
